# zkvm-programs

./: .gitignore  Cargo.toml  README.md  build.sh
crates/replayable-tls/: Cargo.toml
crates/replayable-tls/src/: stream.rs
crates/tls/: Cargo.toml
crates/tls/src/: entry.rs  request.rs
crates/tls/testdata/: guest_input0.cbor
crates/zktls-core/: Cargo.toml
crates/zktls-core/src/: error.rs  guest_input.rs  guest_output.rs  lib.rs  origin.rs  request.rs  request_light.rs  tls.rs
crates/zktls-core/testdata/: request.json
crates/zktls/recordable-tls-provider/: Cargo.toml
crates/zktls/recordable-tls-provider/src/: lib.rs  provider.rs  random.rs  stream.rs  time.rs
crates/zktls/replayable-tls/: Cargo.toml
crates/zktls/replayable-tls-provider/: Cargo.toml
crates/zktls/replayable-tls-provider/src/: lib.rs  provider.rs  random.rs  stream.rs  time.rs
crates/zktls/replayable-tls/src/: entry.rs  lib.rs  request.rs
crates/zktls/zktls-core/: Cargo.toml
crates/zktls/zktls-core/src/: error.rs  guest_input.rs  lib.rs  origin.rs  request.rs
crates/zktls/zktls-core/testdata/: request.json  request1.json  request2.json  request_data.txt
r0/tls-r0/: Cargo.toml
r0/tls-r0/src/: main.rs
scripts/: build.sh
sp1/: Cargo.toml  build.rs
tools/compute-imageid/: Cargo.toml
tools/compute-imageid/src/: main.rs
tools/compute-vkey/: Cargo.toml
tools/compute-vkey/src/: main.rs
tools/tool/: Cargo.toml
tools/tool/src/: main.rs  sign.rs
wasm/zktls/: Cargo.toml  LICENSE_MIT  build.sh
wasm/zktls/src/: lib.rs
zktls/r0/: Cargo.toml  build.rs
zktls/r0/src/: main.rs
zktls/r0/tls-r0/: Cargo.toml
zktls/r0/tls-r0/src/: main.rs
zktls/sp1/: Cargo.toml
zktls/sp1/src/: lib.rs  main.rs
zktls/sp1/tls-sp1/: Cargo.toml
