[workspace]
resolver = "2"

members = [
    "crates/zktls-core",
    "crates/replayable-tls",
    "crates/tls",
    "zktls/r0",
]
# members = ["crates/zktls-core", "crates/replayable-tls"]
exclude = ["zktls/sp1"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
once_cell = "1.19.0"
log = "0.4.22"
bytes = "1.7.2"

rand_core = "0.6.4"

rustls = { version = "0.23.13", default-features = false, features = ["std"] }
rustls-rustcrypto = { git = "https://github.com/the3cloud/rustls-rustcrypto.git" }
webpki-roots = "0.26.6"

# t3zktls-core = { git = "https://github.com/the3cloud/zktls.git", branch = "feat-split-program" }
t3zktls-program-core = { path = "crates/zktls-core" }
t3zktls-replayable-tls = { version = "0.1.0", path = "crates/replayable-tls" }

alloy = "0.7"
ciborium = "0.2.0"
sha2 = "0.10.8"

env_logger = "0.11.5"

serde = { version = "1.0.214", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_bytes = "0.11.15"
