[workspace]
resolver = "2"

members = [
    "crates/zktls/zktls-core",
    "crates/zktls/replayable-tls",
    "crates/zktls/replayable-tls-provider",
    "crates/zktls/recordable-tls-provider",
    "tools/compute-vkey",
    "tools/compute-imageid",
    "tools/tool",
]
exclude = ["zktls/r0"]

[workspace.package]
edition = "2021"
version = "0.2.2"

[workspace.dependencies]
once_cell = "1.19.0"
log = "0.4.22"
bytes = "1.7.2"

rand_core = "0.6.4"

rustls = { version = "0.23.13", default-features = false, features = ["std"] }
rustls-rustcrypto = { git = "https://github.com/the3cloud/rustls-rustcrypto.git" }
webpki-roots = "0.26.6"

# t3zktls-core = { git = "https://github.com/the3cloud/zktls.git", branch = "feat-split-program" }
zktls-program-core = { version = "0.2.1", path = "crates/zktls/zktls-core" }
zktls-replayable-tls = { version = "0.2.1", path = "crates/zktls/replayable-tls" }
zktls-replayable-tls-provider = { version = "0.2.1", path = "crates/zktls/replayable-tls-provider" }

alloy-primitives = "0.8.23"
ciborium = "0.2.0"

thiserror = "2.0"

env_logger = "0.11.5"

serde = { version = "1.0.214", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0"
serde_bytes = "0.11.15"

k256 = "0.13.4"
