[package]
name = "t3zktls-program-tls"
version.workspace = true
edition.workspace = true

[dependencies]
t3zktls-core.workspace = true
t3zktls-replayable-tls.workspace = true

webpki-roots = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }

ciborium = { workspace = true }

sha2.workspace = true

alloy = { workspace = true, features = ["sol-types"] }

[dev-dependencies]
env_logger = { workspace = true }
# hex = { workspace = true }