[package]
name = "t3zktls-program-core"
edition.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

alloy = { workspace = true, features = ["serde", "sol-types"] }
hex = "0.4.3"

[dev-dependencies]
env_logger = { workspace = true }
