[package]
name = "zkvm-tool"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.98"
alloy-primitives.workspace = true
zktls-program-core.workspace = true
serde_json.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }

hex = "0.4.3"
