[package]
name = "zktls"
version = "0.2.3"
authors = ["steve-the3cloud <steve@the3.cloud>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.6.5"

getrandom = { version = "0.2.8", features = ["js"] }

zktls-program-core = { path = "../../crates/zktls/zktls-core" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
