[package]
name = "zktls-r0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5", features = ["std"], default-features = false }
risc0-zkvm-platform = { version = "1.2.5", features = ["sys-getenv"] }

zktls-program-core = { path = "../../crates/zktls/zktls-core" }
zktls-replayable-tls = { path = "../../crates/zktls/replayable-tls" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
