[package]
name = "zktls-r0"
version = "0.2.3"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.2", features = [
    "std",
    "getrandom",
    "unstable",
    "heap-embedded-alloc",
], default-features = false }

zktls-program-core = { path = "../../crates/zktls/zktls-core" }
zktls-replayable-tls = { path = "../../crates/zktls/replayable-tls" }

bytemuck_derive = "=1.8.1"

# getrandom = { version = "0.3", features = ["custom"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
# p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
# k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
# rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }
