[package]
name = "zktls-replayable-tls-provider"
version.workspace = true
edition.workspace = true

[dependencies]
once_cell.workspace = true

rustls.workspace = true
rustls-rustcrypto.workspace = true
webpki-roots.workspace = true
rand_core.workspace = true
bytes.workspace = true
log.workspace = true

zktls-program-core.workspace = true
