[package]
name = "zktls-replayable-tls"
version.workspace = true
edition.workspace = true

[dependencies]
zktls-program-core.workspace = true
zktls-replayable-tls-provider.workspace = true

webpki-roots = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }

ciborium = { workspace = true }

alloy-primitives = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
