[package]
name = "zktls-program-core"
edition.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

alloy = { workspace = true, features = ["serde", "k256", "sol-types"] }

thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
serde_json = { workspace = true }
